remove margin from hr

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -617,8 +617,9 @@ h1 {
 }
 
 hr {
-  margin: 10px 0px;
   border-top: 1px solid #B1B1B1;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 /***************
