remove legacy requirements from user#show angular page

--- a/app/views/user/angular_show.html.erb
+++ b/app/views/user/angular_show.html.erb
@@ -3,10 +3,8 @@
   <%= stylesheet_link_tag 'user' %>
   <%= stylesheet_link_tag 'gray_wrap' %>
   <%= stylesheet_link_tag 'records' %>
-  <%= javascript_include_tag 'masonry-4.0.0', :async => true %>
-  <%= javascript_include_tag 'angular', :async => true %>
-  <%= javascript_include_tag 'records_app', :async => true %>
-  <%= javascript_include_tag 'jquery.inview.min', :async => true %>
+  <%= javascript_include_tag 'records_app' %>
+<% end %>
 <% end %>
 
 <% provide(:page_title, "Contributions") %>
