--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -267,6 +267,8 @@ span.btn.btn-small.btn-default.btn-inverse {
   height: 30px;
   background-color: #fff;
   border-top: 1px solid #a7a7a7;
+  width: 100%;
+  border-radius: 0px;
 }
 
 .pagination-controls {
