set width of loaded audio and video

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -193,6 +193,10 @@ span.btn.btn-small.btn-default.btn-inverse {
   padding: 30px 0px;
 }
 
+.loaded-media {
+  width: 300px;
+}
+
 .loaded-video {
   position: relative;
   margin-left: -150px;
