--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -2,6 +2,7 @@
   <%= stylesheet_link_tag 'records' %>
   <%= stylesheet_link_tag 'mobile_gray_wrap' %>
   <%= stylesheet_link_tag 'bootstrap-datetimepicker' %>
+  <%= javascript_include_tag 'form_app' %>
 <% end %>
 
 <% provide(:page_title, "New Record") %>
