--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -69,6 +69,75 @@ sup {
   margin-bottom: 0px;
 }
 
+#record_hashtag, #record-description {
+  font-weight: 100;
+}
+
+/**********************
+* progress bar styles *
+**********************/
+
+#progress-bar-table-container {
+  padding-left: 180px;
+  padding-top: 20px;
+  padding-right: 6px;
+}
+
+#progress-bar-table {
+  width: 100%;
+  margin-bottom: 0px;
+}
+
+/* styling for odd and even rows in table */
+#progress-bar-table tr:nth-of-type(even) {
+  background-color: #EDFAFE;
+}
+
+#progress-bar-table tr:nth-of-type(odd) {
+  background-color: #fff;
+}
+
+#round-table-edges {
+  margin-bottom: 0px;
+}
+
+#progress-bar-table .file-name-container {
+  max-width: 40%;
+  width: 40%;
+}
+
+.progress {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0px;
+  height: 20px;
+  overflow: hidden;
+  line-height: 15px;
+  overflow: hidden;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+  background-color: #f5f5f5;
+}
+
+.progress div {
+  font-size: smaller;
+  background: #4BB0D3;
+  height: 100%;
+}
+
+span.progress {
+  height: 100%;
+}
+
+/* styles for filename rows */
+.file-name {
+  height: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 0.8em;
+  word-break: break-all;
+  padding-top: 3px;
+}
 
 /*********************
 * file upload styles *
@@ -100,6 +169,11 @@ span.btn.btn-small.btn-default.btn-inverse {
   border: 1px solid lightgray;
   font-style: italic;
   border-radius: 4px;
+}
+
+/* set height of container */
+#file-upload-container {
+  padding-bottom: 30px;
 }
 
 /****************
@@ -452,10 +526,6 @@ hr.clear-floats {
     width: 100%;
   }
 
-  select#record_content_type {
-    width: 100%;
-  }
-
   div#placeholder-box {
     display: none;
   }
@@ -533,10 +603,6 @@ hr.clear-floats {
 
   #placeholder-box {
     width: 200px;
-  }
-
-  select#record_content_type {
-    width: 120px;
   }
 
   span.btn.btn-small.btn-default.btn-inverse {
