on hover of word in text overlay, bring opacity up

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -378,6 +378,7 @@ html, body {
 
 #text-overlay div:hover {
   color: #3399cc !important;
+  opacity: .8 !important;
 }
 
 @media (min-width: 0px) and (max-width: 359px) {
