update copy in the records new page

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -2,6 +2,7 @@
   <%= stylesheet_link_tag 'records' %>
   <%= stylesheet_link_tag 'mobile_gray_wrap' %>
   <%= stylesheet_link_tag 'bootstrap-datetimepicker' %>
+
   <%= javascript_include_tag 'form_app' %>
 <% end %>
 
@@ -14,7 +15,7 @@
 <div class="container">
   <div class="padding-sides">
     <h1>Contribute</h1>
-    <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
+    <div class="preface-text">We all have our unique stories, but we are not alone. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
   </div>
 </div>
 
@@ -26,7 +27,7 @@
 
       <div class="clear-floats"></div>
 
-      <div class="postscript-text">To discuss donating other collections of personal papers or organizational records to Manuscripts and Archives, please send inquiries to: <b>mssa.donatematerials@yale.edu</b></div>
+      <div class="postscript-text">To discuss donating other collections of personal papers, ephemera, or organizational records to Manuscripts and Archives, please send inquiries to: <b>mssa.donatematerials@yale.edu</b></div>
       
     </div>
   </div>
