update copy in static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -10,17 +10,21 @@
 <div class="container padding-bottom">
   <div class="padding-sides">
 
-    <h1>Our Story</h1>
+    <h1>About</h1>
 
-    <div class="preface-text">Lorem ipsum dolor sit amet, odio eget vivamus non enim, wisi et elementum eget porta conubia et, congue sed augue eros dui justo eget, leo vivamus, ut mauris eget et semper. In placerat rhoncus sem, vivamus tincidunt fermentum pretium gravida sapien maecenas, placerat enim, lorem morbi nibh facilisis nunc. Vehicula et dui lobortis et, dignissim qui vivamus posuere blandit magnis libero. Augue accumsan. Nibh nibh turpis, ultrices imperdiet dui sodales morbi.</div>
+    <div class="preface-text">The Yale Community Voices Archive (YCVA) gathers material associated with student activism at Yale, specifically the protests regarding racial justice. In the fall of 2015, allegations of racial discrimination and insensitivity surfaced, prompting widespread campus protests.  Senior administrators reaffirmed the university’s commitment to increase, respect and support diversity, but the decisions on the residential college names and “Master” title announced at the end of April 2016 spurred further dissent among members of the Yale Community.</div>
 
-    <div class="preface-text">Hendrerit ultricies consequat libero id quis. Quis ut. Urna orci turpis ut. Sed aliquam sed sit consequat vulputate mauris. Erat conubia tellus, libero metus ante et urna senectus, in porta nunc egestas amet id, rutrum eu. Pretium aenean interdum magna, lorem cupidatat. Aliquam nulla, eu tincidunt urna nunc wisi, erat eu risus mattis, ut donec metus. Praesent et, sed donec at, ipsum vitae sodales ligula cursus augue.</div>
+    <div class="preface-text">The archive aims to capture a broad range of digital materials related to student activism and discussions of race, ethnicity, and social justice at Yale.  These discussions have raised issues of diversity and inclusion and made the intersectional challenges faced by students of color audible and visible to the broader Yale community. The material produced by and related to these protests is contributed by these communities to a content management system that allows secure and private storage of born digital content while allowing professionally managed access to that content. The project responds both to the students’ use of social media for chronicling and debating these events as well as the Yale University Archives seeking a user-friendly means of collecting and preserving digital content.  The platform aims to preserve the strength and resilience of these voices in order to better understand the roles of diversity and inclusion in how we teach and learn.</div>
 
-    <div class="preface-text">Ac nibh orci, mi dignissim, quaerat proin sociosqu, habitasse odio. A lacus phasellus ac sit, vestibulum nec commodo dui amet vitae accumsan, quis bibendum maecenas ultrices sit. Augue integer lorem consectetuer mauris, nulla netus lobortis aliquam arcu convallis. Tempor id mauris, vestibulum metus convallis porta suscipit pretium varius, eget vel, nibh non in erat aliquam sapien suscipit. Placerat volutpat.</div>
+    <div class="preface-text">The platform allows institutional archives to collect, use, and disclose student information solely in ways that are compatible with the context in which students provide such information. Future use of the archive will be restricted to educational and research purposes and will be governed by the collection development policies of Manuscripts and Archives for Student Body and Life  at the Yale University Library.</div>
 
-    <div class="preface-text">Rhoncus feugiat nec placerat molestie vulputate, nullam faucibus sed, risus ut, mauris enim gravida sed sit eget libero. Pellentesque justo ut quam, interdum turpis adipiscing sit. Amet mauris fermentum nec, mi ut curabitur ante varius, justo eget iaculis ut, interdum lacus, interdum nisl nunc pede ante arcu. Tristique at est. Eleifend pede, eget mi, a dolor urna, erat ridiculus quam lectus amet convallis diam, aenean tellus tristique quam mi. Ante donec, ut mollis ut lobortis tincidunt, aenean sagittis sunt sociis semper et faucibus, ac elit semper malesuada pellentesque.</div>
-
-    <div class="preface-text">Rhoncus feugiat nec placerat molestie vulputate, nullam faucibus sed, risus ut, mauris enim gravida sed sit eget libero. Pellentesque justo ut quam, interdum turpis adipiscing sit. Amet mauris fermentum nec, mi ut curabitur ante varius, justo eget iaculis ut, interdum lacus, interdum nisl nunc pede ante arcu. Tristique at est. Eleifend pede, eget mi, a dolor urna, erat ridiculus quam lectus amet convallis diam, aenean tellus tristique quam mi. Ante donec, ut mollis ut lobortis tincidunt, aenean sagittis sunt sociis semper et faucibus, ac elit semper malesuada pellentesque.</div>
+    <h1>People</h1>
+    <div class="preface-text">
+      Project coordinators - Carol Chiodo and Michael Lotstein<br>
+      User experience designer - Monica Ong Reed<br>
+      Developer - Doug Duhaime<br>
+      Advisory board - TBA<br>
+    </div>
 
   </div>
 </div>
