--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
   <div class="padding-sides">
     <h1>The Yale Community Voices Archive</h1>
     <div class="body-text">
-      The Yale Community Voices Archive (YCVA) captures digital materials related to issues of diversity and inclusion on campus during the 2015-2016 academic year. The protests made the challenges faced by students of color audible and visible to the braoder Yale community. The material produced by and related to these protests will be gathered from the stakeholders themselves through a participatory platform. The project responds to the students' user of social media for chronicling these events as well as demand from scholars and archivists seeking a user-friendly means of collecting and preserving digital content.
+      The Yale Community Voices Archive (YCVA) captures digital materials related to issues of diversity and inclusion on campus during the 2015-2016 academic year. A series of protests and teach-ins made the challenges faced by students of color audible and visible to the braoder Yale community. The material produced by and related to these protests will be gathered from the stakeholders themselves through a participatory platform. The project responds to the students' use of social media for chronicling these events as well as demand from scholars and archivists seeking a user-friendly means of collecting and preserving digital content.
       <br>
       <br>
 
